src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND_ASSIGN
    AUTO
    BITAND
    BITNOT
    BITOR
    BITXOR
    CASE
    COLON
    CONST
    DEFAULT
    DIV_ASSIGN
    DO
    ENUM
    EXTERN
    GOTO
    HASH
    INLINE
    LBRACKET
    LONG
    LSHIFT
    LSHIFT_ASSIGN
    MINUS_ASSIGN
    MOD_ASSIGN
    MULT_ASSIGN
    OR_ASSIGN
    PLUS_ASSIGN
    QUESTION
    RBRACKET
    REGISTER
    RESTRICT
    RSHIFT
    RSHIFT_ASSIGN
    SHORT
    SIGNED
    SIZEOF
    STATIC
    STRUCT
    SWITCH
    TYPEDEF
    UNION
    UNSIGNED
    VOLATILE
    XOR_ASSIGN

Grammar

Rule 0     S' -> program
Rule 1     program -> external_declaration_list
Rule 2     external_declaration_list -> external_declaration_list external_declaration
Rule 3     external_declaration_list -> external_declaration
Rule 4     external_declaration -> function_definition
Rule 5     external_declaration -> declaration
Rule 6     declaration -> type_specifier init_declarator_list SEMI
Rule 7     type_specifier -> INT
Rule 8     type_specifier -> FLOAT
Rule 9     type_specifier -> DOUBLE
Rule 10    type_specifier -> CHAR
Rule 11    type_specifier -> VOID
Rule 12    init_declarator_list -> init_declarator
Rule 13    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 14    init_declarator -> ID
Rule 15    init_declarator -> ID ASSIGN constant
Rule 16    constant -> NUMBER
Rule 17    constant -> FLOATNUM
Rule 18    constant -> CHAR_CONST
Rule 19    constant -> STRING
Rule 20    function_definition -> type_specifier ID LPAREN parameter_list RPAREN compound_statement
Rule 21    function_definition -> type_specifier ID LPAREN RPAREN compound_statement
Rule 22    parameter_list -> parameter
Rule 23    parameter_list -> parameter_list COMMA parameter
Rule 24    parameter -> type_specifier ID
Rule 25    compound_statement -> LBRACE statement_list RBRACE
Rule 26    compound_statement -> LBRACE RBRACE
Rule 27    statement_list -> statement_list statement
Rule 28    statement_list -> statement
Rule 29    statement -> declaration
Rule 30    statement -> expression_statement
Rule 31    statement -> selection_statement
Rule 32    statement -> iteration_statement
Rule 33    statement -> jump_statement
Rule 34    statement -> compound_statement
Rule 35    expression_statement -> expression SEMI
Rule 36    expression_statement -> SEMI
Rule 37    expression -> assignment_expression
Rule 38    expression -> expression COMMA assignment_expression
Rule 39    assignment_expression -> ID ASSIGN assignment_expression
Rule 40    assignment_expression -> logical_or_expression
Rule 41    logical_or_expression -> logical_and_expression
Rule 42    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 43    logical_and_expression -> equality_expression
Rule 44    logical_and_expression -> logical_and_expression AND equality_expression
Rule 45    equality_expression -> relational_expression
Rule 46    equality_expression -> equality_expression EQ relational_expression
Rule 47    equality_expression -> equality_expression NEQ relational_expression
Rule 48    relational_expression -> additive_expression
Rule 49    relational_expression -> relational_expression LT additive_expression
Rule 50    relational_expression -> relational_expression LE additive_expression
Rule 51    relational_expression -> relational_expression GT additive_expression
Rule 52    relational_expression -> relational_expression GE additive_expression
Rule 53    additive_expression -> multiplicative_expression
Rule 54    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 55    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 56    multiplicative_expression -> unary_expression
Rule 57    multiplicative_expression -> multiplicative_expression MULT unary_expression
Rule 58    multiplicative_expression -> multiplicative_expression DIV unary_expression
Rule 59    multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 60    postfix_expression -> primary_expression
Rule 61    postfix_expression -> postfix_expression LPAREN argument_expression_list_opt RPAREN
Rule 62    postfix_expression -> postfix_expression INCREMENT
Rule 63    postfix_expression -> postfix_expression DECREMENT
Rule 64    argument_expression_list_opt -> argument_expression_list
Rule 65    argument_expression_list_opt -> empty
Rule 66    argument_expression_list -> assignment_expression
Rule 67    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 68    unary_expression -> postfix_expression
Rule 69    unary_expression -> PLUS unary_expression
Rule 70    unary_expression -> MINUS unary_expression
Rule 71    unary_expression -> NOT unary_expression
Rule 72    unary_expression -> INCREMENT unary_expression
Rule 73    unary_expression -> DECREMENT unary_expression
Rule 74    primary_expression -> ID
Rule 75    primary_expression -> constant
Rule 76    primary_expression -> LPAREN expression RPAREN
Rule 77    selection_statement -> IF LPAREN expression RPAREN statement
Rule 78    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 79    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 80    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 81    jump_statement -> RETURN expression SEMI
Rule 82    jump_statement -> BREAK SEMI
Rule 83    jump_statement -> CONTINUE SEMI
Rule 84    empty -> <empty>

Terminals, with rules where they appear

AND                  : 44
AND_ASSIGN           : 
ASSIGN               : 15 39
AUTO                 : 
BITAND               : 
BITNOT               : 
BITOR                : 
BITXOR               : 
BREAK                : 82
CASE                 : 
CHAR                 : 10
CHAR_CONST           : 18
COLON                : 
COMMA                : 13 23 38 67
CONST                : 
CONTINUE             : 83
DECREMENT            : 63 73
DEFAULT              : 
DIV                  : 58
DIV_ASSIGN           : 
DO                   : 
DOUBLE               : 9
ELSE                 : 78
ENUM                 : 
EQ                   : 46
EXTERN               : 
FLOAT                : 8
FLOATNUM             : 17
FOR                  : 80
GE                   : 52
GOTO                 : 
GT                   : 51
HASH                 : 
ID                   : 14 15 20 21 24 39 74
IF                   : 77 78
INCREMENT            : 62 72
INLINE               : 
INT                  : 7
LBRACE               : 25 26
LBRACKET             : 
LE                   : 50
LONG                 : 
LPAREN               : 20 21 61 76 77 78 79 80
LSHIFT               : 
LSHIFT_ASSIGN        : 
LT                   : 49
MINUS                : 55 70
MINUS_ASSIGN         : 
MOD                  : 59
MOD_ASSIGN           : 
MULT                 : 57
MULT_ASSIGN          : 
NEQ                  : 47
NOT                  : 71
NUMBER               : 16
OR                   : 42
OR_ASSIGN            : 
PLUS                 : 54 69
PLUS_ASSIGN          : 
QUESTION             : 
RBRACE               : 25 26
RBRACKET             : 
REGISTER             : 
RESTRICT             : 
RETURN               : 81
RPAREN               : 20 21 61 76 77 78 79 80
RSHIFT               : 
RSHIFT_ASSIGN        : 
SEMI                 : 6 35 36 81 82 83
SHORT                : 
SIGNED               : 
SIZEOF               : 
STATIC               : 
STRING               : 19
STRUCT               : 
SWITCH               : 
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VOID                 : 11
VOLATILE             : 
WHILE                : 79
XOR_ASSIGN           : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 48 49 50 51 52 54 55
argument_expression_list : 64 67
argument_expression_list_opt : 61
assignment_expression : 37 38 39 66 67
compound_statement   : 20 21 34
constant             : 15 75
declaration          : 5 29
empty                : 65
equality_expression  : 43 44 46 47
expression           : 35 38 76 77 78 79 80 81
expression_statement : 30 80 80
external_declaration : 2 3
external_declaration_list : 1 2
function_definition  : 4
init_declarator      : 12 13
init_declarator_list : 6 13
iteration_statement  : 32
jump_statement       : 33
logical_and_expression : 41 42 44
logical_or_expression : 40 42
multiplicative_expression : 53 54 55 57 58 59
parameter            : 22 23
parameter_list       : 20 23
postfix_expression   : 61 62 63 68
primary_expression   : 60
program              : 0
relational_expression : 45 46 47 49 50 51 52
selection_statement  : 31
statement            : 27 28 77 78 78 79 80
statement_list       : 25 27
type_specifier       : 6 20 21 24
unary_expression     : 56 57 58 59 69 70 71 72 73

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_declaration_list
    (2) external_declaration_list -> . external_declaration_list external_declaration
    (3) external_declaration_list -> . external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (20) function_definition -> . type_specifier ID LPAREN parameter_list RPAREN compound_statement
    (21) function_definition -> . type_specifier ID LPAREN RPAREN compound_statement
    (6) declaration -> . type_specifier init_declarator_list SEMI
    (7) type_specifier -> . INT
    (8) type_specifier -> . FLOAT
    (9) type_specifier -> . DOUBLE
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    DOUBLE          shift and go to state 9
    CHAR            shift and go to state 10
    VOID            shift and go to state 11

    program                        shift and go to state 1
    external_declaration_list      shift and go to state 2
    external_declaration           shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> external_declaration_list .
    (2) external_declaration_list -> external_declaration_list . external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (20) function_definition -> . type_specifier ID LPAREN parameter_list RPAREN compound_statement
    (21) function_definition -> . type_specifier ID LPAREN RPAREN compound_statement
    (6) declaration -> . type_specifier init_declarator_list SEMI
    (7) type_specifier -> . INT
    (8) type_specifier -> . FLOAT
    (9) type_specifier -> . DOUBLE
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> external_declaration_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    DOUBLE          shift and go to state 9
    CHAR            shift and go to state 10
    VOID            shift and go to state 11

    external_declaration           shift and go to state 12
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) external_declaration_list -> external_declaration .

    INT             reduce using rule 3 (external_declaration_list -> external_declaration .)
    FLOAT           reduce using rule 3 (external_declaration_list -> external_declaration .)
    DOUBLE          reduce using rule 3 (external_declaration_list -> external_declaration .)
    CHAR            reduce using rule 3 (external_declaration_list -> external_declaration .)
    VOID            reduce using rule 3 (external_declaration_list -> external_declaration .)
    $end            reduce using rule 3 (external_declaration_list -> external_declaration .)


state 4

    (4) external_declaration -> function_definition .

    INT             reduce using rule 4 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 4 (external_declaration -> function_definition .)
    CHAR            reduce using rule 4 (external_declaration -> function_definition .)
    VOID            reduce using rule 4 (external_declaration -> function_definition .)
    $end            reduce using rule 4 (external_declaration -> function_definition .)


state 5

    (5) external_declaration -> declaration .

    INT             reduce using rule 5 (external_declaration -> declaration .)
    FLOAT           reduce using rule 5 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 5 (external_declaration -> declaration .)
    CHAR            reduce using rule 5 (external_declaration -> declaration .)
    VOID            reduce using rule 5 (external_declaration -> declaration .)
    $end            reduce using rule 5 (external_declaration -> declaration .)


state 6

    (20) function_definition -> type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    (21) function_definition -> type_specifier . ID LPAREN RPAREN compound_statement
    (6) declaration -> type_specifier . init_declarator_list SEMI
    (12) init_declarator_list -> . init_declarator
    (13) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (14) init_declarator -> . ID
    (15) init_declarator -> . ID ASSIGN constant

    ID              shift and go to state 13

    init_declarator_list           shift and go to state 14
    init_declarator                shift and go to state 15

state 7

    (7) type_specifier -> INT .

    ID              reduce using rule 7 (type_specifier -> INT .)


state 8

    (8) type_specifier -> FLOAT .

    ID              reduce using rule 8 (type_specifier -> FLOAT .)


state 9

    (9) type_specifier -> DOUBLE .

    ID              reduce using rule 9 (type_specifier -> DOUBLE .)


state 10

    (10) type_specifier -> CHAR .

    ID              reduce using rule 10 (type_specifier -> CHAR .)


state 11

    (11) type_specifier -> VOID .

    ID              reduce using rule 11 (type_specifier -> VOID .)


state 12

    (2) external_declaration_list -> external_declaration_list external_declaration .

    INT             reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    FLOAT           reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    DOUBLE          reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    CHAR            reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    VOID            reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    $end            reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)


state 13

    (20) function_definition -> type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    (21) function_definition -> type_specifier ID . LPAREN RPAREN compound_statement
    (14) init_declarator -> ID .
    (15) init_declarator -> ID . ASSIGN constant

    LPAREN          shift and go to state 16
    SEMI            reduce using rule 14 (init_declarator -> ID .)
    COMMA           reduce using rule 14 (init_declarator -> ID .)
    ASSIGN          shift and go to state 17


state 14

    (6) declaration -> type_specifier init_declarator_list . SEMI
    (13) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            shift and go to state 18
    COMMA           shift and go to state 19


state 15

    (12) init_declarator_list -> init_declarator .

    SEMI            reduce using rule 12 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 12 (init_declarator_list -> init_declarator .)


state 16

    (20) function_definition -> type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    (21) function_definition -> type_specifier ID LPAREN . RPAREN compound_statement
    (22) parameter_list -> . parameter
    (23) parameter_list -> . parameter_list COMMA parameter
    (24) parameter -> . type_specifier ID
    (7) type_specifier -> . INT
    (8) type_specifier -> . FLOAT
    (9) type_specifier -> . DOUBLE
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . VOID

    RPAREN          shift and go to state 22
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    DOUBLE          shift and go to state 9
    CHAR            shift and go to state 10
    VOID            shift and go to state 11

    type_specifier                 shift and go to state 20
    parameter_list                 shift and go to state 21
    parameter                      shift and go to state 23

state 17

    (15) init_declarator -> ID ASSIGN . constant
    (16) constant -> . NUMBER
    (17) constant -> . FLOATNUM
    (18) constant -> . CHAR_CONST
    (19) constant -> . STRING

    NUMBER          shift and go to state 25
    FLOATNUM        shift and go to state 26
    CHAR_CONST      shift and go to state 27
    STRING          shift and go to state 28

    constant                       shift and go to state 24

state 18

    (6) declaration -> type_specifier init_declarator_list SEMI .

    INT             reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    FLOAT           reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    DOUBLE          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    CHAR            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    VOID            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    $end            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    RBRACE          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    SEMI            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    IF              reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    WHILE           reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    FOR             reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    RETURN          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    BREAK           reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    CONTINUE        reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    LBRACE          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    ID              reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    PLUS            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    MINUS           reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    NOT             reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    INCREMENT       reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    DECREMENT       reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    LPAREN          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    NUMBER          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    FLOATNUM        reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    CHAR_CONST      reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    STRING          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)
    ELSE            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMI .)


state 19

    (13) init_declarator_list -> init_declarator_list COMMA . init_declarator
    (14) init_declarator -> . ID
    (15) init_declarator -> . ID ASSIGN constant

    ID              shift and go to state 30

    init_declarator                shift and go to state 29

state 20

    (24) parameter -> type_specifier . ID

    ID              shift and go to state 31


state 21

    (20) function_definition -> type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    (23) parameter_list -> parameter_list . COMMA parameter

    RPAREN          shift and go to state 32
    COMMA           shift and go to state 33


state 22

    (21) function_definition -> type_specifier ID LPAREN RPAREN . compound_statement
    (25) compound_statement -> . LBRACE statement_list RBRACE
    (26) compound_statement -> . LBRACE RBRACE

    LBRACE          shift and go to state 35

    compound_statement             shift and go to state 34

state 23

    (22) parameter_list -> parameter .

    RPAREN          reduce using rule 22 (parameter_list -> parameter .)
    COMMA           reduce using rule 22 (parameter_list -> parameter .)


state 24

    (15) init_declarator -> ID ASSIGN constant .

    SEMI            reduce using rule 15 (init_declarator -> ID ASSIGN constant .)
    COMMA           reduce using rule 15 (init_declarator -> ID ASSIGN constant .)


state 25

    (16) constant -> NUMBER .

    SEMI            reduce using rule 16 (constant -> NUMBER .)
    COMMA           reduce using rule 16 (constant -> NUMBER .)
    LPAREN          reduce using rule 16 (constant -> NUMBER .)
    INCREMENT       reduce using rule 16 (constant -> NUMBER .)
    DECREMENT       reduce using rule 16 (constant -> NUMBER .)
    MULT            reduce using rule 16 (constant -> NUMBER .)
    DIV             reduce using rule 16 (constant -> NUMBER .)
    MOD             reduce using rule 16 (constant -> NUMBER .)
    PLUS            reduce using rule 16 (constant -> NUMBER .)
    MINUS           reduce using rule 16 (constant -> NUMBER .)
    LT              reduce using rule 16 (constant -> NUMBER .)
    LE              reduce using rule 16 (constant -> NUMBER .)
    GT              reduce using rule 16 (constant -> NUMBER .)
    GE              reduce using rule 16 (constant -> NUMBER .)
    EQ              reduce using rule 16 (constant -> NUMBER .)
    NEQ             reduce using rule 16 (constant -> NUMBER .)
    AND             reduce using rule 16 (constant -> NUMBER .)
    OR              reduce using rule 16 (constant -> NUMBER .)
    RPAREN          reduce using rule 16 (constant -> NUMBER .)


state 26

    (17) constant -> FLOATNUM .

    SEMI            reduce using rule 17 (constant -> FLOATNUM .)
    COMMA           reduce using rule 17 (constant -> FLOATNUM .)
    LPAREN          reduce using rule 17 (constant -> FLOATNUM .)
    INCREMENT       reduce using rule 17 (constant -> FLOATNUM .)
    DECREMENT       reduce using rule 17 (constant -> FLOATNUM .)
    MULT            reduce using rule 17 (constant -> FLOATNUM .)
    DIV             reduce using rule 17 (constant -> FLOATNUM .)
    MOD             reduce using rule 17 (constant -> FLOATNUM .)
    PLUS            reduce using rule 17 (constant -> FLOATNUM .)
    MINUS           reduce using rule 17 (constant -> FLOATNUM .)
    LT              reduce using rule 17 (constant -> FLOATNUM .)
    LE              reduce using rule 17 (constant -> FLOATNUM .)
    GT              reduce using rule 17 (constant -> FLOATNUM .)
    GE              reduce using rule 17 (constant -> FLOATNUM .)
    EQ              reduce using rule 17 (constant -> FLOATNUM .)
    NEQ             reduce using rule 17 (constant -> FLOATNUM .)
    AND             reduce using rule 17 (constant -> FLOATNUM .)
    OR              reduce using rule 17 (constant -> FLOATNUM .)
    RPAREN          reduce using rule 17 (constant -> FLOATNUM .)


state 27

    (18) constant -> CHAR_CONST .

    SEMI            reduce using rule 18 (constant -> CHAR_CONST .)
    COMMA           reduce using rule 18 (constant -> CHAR_CONST .)
    LPAREN          reduce using rule 18 (constant -> CHAR_CONST .)
    INCREMENT       reduce using rule 18 (constant -> CHAR_CONST .)
    DECREMENT       reduce using rule 18 (constant -> CHAR_CONST .)
    MULT            reduce using rule 18 (constant -> CHAR_CONST .)
    DIV             reduce using rule 18 (constant -> CHAR_CONST .)
    MOD             reduce using rule 18 (constant -> CHAR_CONST .)
    PLUS            reduce using rule 18 (constant -> CHAR_CONST .)
    MINUS           reduce using rule 18 (constant -> CHAR_CONST .)
    LT              reduce using rule 18 (constant -> CHAR_CONST .)
    LE              reduce using rule 18 (constant -> CHAR_CONST .)
    GT              reduce using rule 18 (constant -> CHAR_CONST .)
    GE              reduce using rule 18 (constant -> CHAR_CONST .)
    EQ              reduce using rule 18 (constant -> CHAR_CONST .)
    NEQ             reduce using rule 18 (constant -> CHAR_CONST .)
    AND             reduce using rule 18 (constant -> CHAR_CONST .)
    OR              reduce using rule 18 (constant -> CHAR_CONST .)
    RPAREN          reduce using rule 18 (constant -> CHAR_CONST .)


state 28

    (19) constant -> STRING .

    SEMI            reduce using rule 19 (constant -> STRING .)
    COMMA           reduce using rule 19 (constant -> STRING .)
    LPAREN          reduce using rule 19 (constant -> STRING .)
    INCREMENT       reduce using rule 19 (constant -> STRING .)
    DECREMENT       reduce using rule 19 (constant -> STRING .)
    MULT            reduce using rule 19 (constant -> STRING .)
    DIV             reduce using rule 19 (constant -> STRING .)
    MOD             reduce using rule 19 (constant -> STRING .)
    PLUS            reduce using rule 19 (constant -> STRING .)
    MINUS           reduce using rule 19 (constant -> STRING .)
    LT              reduce using rule 19 (constant -> STRING .)
    LE              reduce using rule 19 (constant -> STRING .)
    GT              reduce using rule 19 (constant -> STRING .)
    GE              reduce using rule 19 (constant -> STRING .)
    EQ              reduce using rule 19 (constant -> STRING .)
    NEQ             reduce using rule 19 (constant -> STRING .)
    AND             reduce using rule 19 (constant -> STRING .)
    OR              reduce using rule 19 (constant -> STRING .)
    RPAREN          reduce using rule 19 (constant -> STRING .)


state 29

    (13) init_declarator_list -> init_declarator_list COMMA init_declarator .

    SEMI            reduce using rule 13 (init_declarator_list -> init_declarator_list COMMA init_declarator .)
    COMMA           reduce using rule 13 (init_declarator_list -> init_declarator_list COMMA init_declarator .)


state 30

    (14) init_declarator -> ID .
    (15) init_declarator -> ID . ASSIGN constant

    SEMI            reduce using rule 14 (init_declarator -> ID .)
    COMMA           reduce using rule 14 (init_declarator -> ID .)
    ASSIGN          shift and go to state 17


state 31

    (24) parameter -> type_specifier ID .

    RPAREN          reduce using rule 24 (parameter -> type_specifier ID .)
    COMMA           reduce using rule 24 (parameter -> type_specifier ID .)


state 32

    (20) function_definition -> type_specifier ID LPAREN parameter_list RPAREN . compound_statement
    (25) compound_statement -> . LBRACE statement_list RBRACE
    (26) compound_statement -> . LBRACE RBRACE

    LBRACE          shift and go to state 35

    compound_statement             shift and go to state 36

state 33

    (23) parameter_list -> parameter_list COMMA . parameter
    (24) parameter -> . type_specifier ID
    (7) type_specifier -> . INT
    (8) type_specifier -> . FLOAT
    (9) type_specifier -> . DOUBLE
    (10) type_specifier -> . CHAR
    (11) type_specifier -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    DOUBLE          shift and go to state 9
    CHAR            shift and go to state 10
    VOID            shift and go to state 11

    parameter                      shift and go to state 37
    type_specifier                 shift and go to state 20

state 34
